--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
   fl_chart: ^1.1.1
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
+  random_string: ^2.3.1
+  shared_preferences: ^2.5.4
+  cloud_firestore: ^6.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
